fixed image spacing (added them to sections)

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 
 .listBackground{
   text-align: center;
+  height: 150px;
   width: 150px;
   background-color: orange;
   border-radius: 20px;
